# project-echo

./: .gitignore  README.md  pyproject.toml
.claude/plans/: 2026-04-09-hotkey-daemon.md  2026-04-09-project-echo-mvp.md
.github/workflows/: ci.yml
config/: config.example.toml
docs/superpowers/specs/: 2026-04-09-hotkey-daemon-design.md  2026-04-09-project-echo-design.md
src/echo/: __main__.py  clipboard.py  config.py  daemon.py  hotkey.py  recorder.py  sounds.py  transcriber.py  ui.py
tests/: test_clipboard.py  test_config.py  test_daemon.py  test_hotkey.py  test_main.py  test_sounds.py  test_transcriber.py  test_ui.py
