[project]
name = "project-echo"
version = "0.1.0"
description = "CLI dictation tool: record audio, transcribe via OpenAI, copy to clipboard."
requires-python = ">=3.12"
dependencies = [
    "openai>=1.40.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "soundfile>=0.12.1",
]

[project.scripts]
ec = "echo.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/echo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
